# mm_client

./: Cargo.toml  README.md  circle.yml  config.toml.example
.circleci/: config.yml
src/: client.rs  error.rs  lib.rs  request.rs
src/cli/: config.rs  error.rs  main.rs
src/endpoints/: assets.rs  collections.rs  episodes.rs  franchises.rs  mod.rs  request.rs  seasons.rs  shows.rs  specials.rs
