[package]
authors = ["TPT <webmaster@tpt.org>"]
description = "Library for interfacing with PBS Media Manager API"
license = "Apache-2.0"
name = "mm_client"
repository = "https://github.com/twincitiespublictelevision/mm_client"
version = "0.10.0"

[[bin]]
doc = true
name = "mm_cli"
path = "src/cli/main.rs"
required-features = ["cli"]
test = true

[dependencies]
reqwest = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.85"

[dependencies.app_dirs]
optional = true
version = "1.1.1"

[dependencies.clap]
optional = true
version = "2.2"

[dependencies.toml]
optional = true
version = "0.4"

[dev-dependencies]
assert_matches = "1.0"
mockito = "0.2.2"

[dev-dependencies.uuid]
features = ["v4"]
version = "0.2"

[features]
cli = [
    "app_dirs",
    "clap",
    "toml",
]
