[package]
authors = ["TPT <webmaster@tpt.org>"]
description = "Library for interfacing with PBS Media Manager API"
edition = "2018"
license = "Apache-2.0"
name = "mm_client"
repository = "https://github.com/twincitiespublictelevision/mm_client"
version = "0.11.0"

[[bin]]
doc = true
name = "mm_cli"
path = "src/cli/main.rs"
required-features = ["cli"]
test = true

[dependencies]
reqwest = "0.6"
serde_derive = "1.0.85"
serde_json = "1.0"

[dependencies.app_dirs]
optional = true
version = "1.1.1"

[dependencies.clap]
optional = true
version = "2.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.toml]
optional = true
version = "0.4"

[dev-dependencies]
mockito = "0.15"

[dev-dependencies.uuid]
features = ["v4"]
version = "0.2"

[features]
cli = [
    "app_dirs",
    "clap",
    "toml",
]
